Reconfigred to use CMake, created custom shader embedding function, may use CMRC or QT Resource EMbedding (https://doc.qt.io/qt-6/resources.html) in future as alternative

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ x64/
 RealEngine.vcxproj
 RealEngine.vcxproj.filters
 RealEngine.vcxproj.user
+shaders/compiled
+shaders/embedded
+source/shadersEmbedded.cpp
