build file no longer in github repo

--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -25,8 +25,8 @@
         {
             "name": "BuildShaders",
             "generator": "Ninja",
-            "buildRoot": "${projectDir}\\build\\${name}",
-            "installRoot": "${projectDir}\\install\\${name}",
+            "buildRoot": "${projectDir}\\out\\build\\${name}",
+            "installRoot": "${projectDir}\\out\\install\\${name}",
             "cmakeCommandArgs": "",
             "buildCommandArgs": "",
             "variables": [
