added json parsing file from last engine, gonna try to switch it around so it's less verbose

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,7 @@ set(real_headers
     headers/vertexIndex.hpp
     headers/commandArgs.hpp
     headers/scene.hpp
+    headers/jsonParsing.hpp
     headers/input.hpp
     headers/mode.hpp
     headers/playMode.hpp
